crates/sol-types/tests/ui/features/not(json)/abigen.stderr
error: empty input is not allowed
 --> tests/ui/not(json)/abigen.rs:3:16
  |
3 | sol!(EmptyStr, "");
  |                ^^

error: failed to canonicalize path: No such file or directory (os error 2)
 --> tests/ui/not(json)/abigen.rs:5:24
  |
5 | sol!(PathDoesNotExist, "???");
  |                        ^^^^^

error: failed to canonicalize path: No such file or directory (os error 2)
 --> tests/ui/not(json)/abigen.rs:6:6
  |
6 | sol!("pragma solidity ^0.8.0");
  |      ^^^^^^^^^^^^^^^^^^^^^^^^

error: failed to canonicalize path: No such file or directory (os error 2)
 --> tests/ui/not(json)/abigen.rs:7:6
  |
7 | sol!("pragma solidity ^0.8.0;");
  |      ^^^^^^^^^^^^^^^^^^^^^^^^^

error: JSON support must be enabled with the `json` feature
 --> tests/ui/not(json)/abigen.rs:9:22
  |
9 | sol!(NoJsonFeature1, "{}");
  |                      ^^^^

error: JSON support must be enabled with the `json` feature
  --> tests/ui/not(json)/abigen.rs:10:22
   |
10 | sol!(NoJsonFeature2, "{ \"abi\": [] }");
   |                      ^^^^^^^^^^^^^^^^^

error: JSON support must be enabled with the `json` feature
  --> tests/ui/not(json)/abigen.rs:11:22
   |
11 | sol!(NoJsonFeature3, "[]");
   |                      ^^^^
